# deepvo-slam

./: .gitignore  Dockerfile  FINAL_SLAM_FULL.py  GTSAM_INSTALL.md  LICENSE  README.md  app.py  evaluation.py  generate_kitti_gps_poses.py  kitti_utils.py  pyproject.toml  requirements.txt  setup.py  train.py
configs/: default_config.yaml
deepvo/: __init__.py
deepvo/slam/: __init__.py  deepvo_model.py
deepvo/utils/: __init__.py  data_loader.py  parameters.py
examples/: basic_slam_example.py
ground_truth_generated/: 00.txt  01.txt  02.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
map_graphs/: map_graph_04.graphml  map_graph_06.graphml  map_graph_07.graphml  map_graph_10.graphml
notebooks/: Webbee_кейс.ipynb
scripts/: train_deepvo.py
tests/: test_deepvo.py
utils/: preprocess.py
